--- a/app/assets/stylesheets/scss/_header.scss
+++ b/app/assets/stylesheets/scss/_header.scss
@@ -134,6 +134,15 @@ header#header {
               &.show {
                 display: flex;
                 flex-direction: column;
+                @media (max-width: $mobileHeader) {
+                  padding-top: 0;
+                  margin-top: -20px;
+                  padding-left: 8px;
+                }
+                @media (max-width: $small) {
+                  padding: 0;
+                  margin-top: 0px;
+                }
               }
               @media (max-width: $mobileHeader) {
                 position: static;
@@ -173,12 +182,15 @@ header#header {
                     display: flex;
                     flex-wrap: nowrap;
                     overflow: auto;
+                    margin: 0px -15px;
+                    background: #e08433;
                   }
                   .drop-link-holder {
                     display: flex;
                     flex: 0 0 30%;
                     @media (max-width: $small) {
                       flex: 0 0 100%;
+                      padding: 0;
                     }
                     .drop-link {
                       font-size: 14px;
@@ -187,6 +199,13 @@ header#header {
                         border-bottom: 1px solid #e5e5e5;
                         width: 100%;
                         padding: 20px 10px;
+                      }
+                      @media (max-width: $small) {
+                        font-size: 16px;
+                        font-weight: 300;
+                        letter-spacing: 0.5px;
+                        color: #fff;
+                        padding-left: 35px;
                       }
                     }
                   }
@@ -217,7 +236,7 @@ header#header {
             &.active {
               color: $primary;
             }
-            img{
+            img {
               margin-left: 5px;
             }
           }
@@ -269,7 +288,7 @@ header#header {
             @media (max-width: 900px) {
               padding-bottom: 0;
             }
-            @media (max-width: 1060px){
+            @media (max-width: 1060px) {
               flex-direction: column;
               align-items: flex-end;
             }
@@ -314,7 +333,7 @@ header#header {
               }
               .cart-text {
                 color: $white;
-                @media (max-width: 1060px){
+                @media (max-width: 1060px) {
                   display: none;
                 }
                 a {
@@ -337,7 +356,7 @@ header#header {
               right: 0;
               @media (max-width: $mobile) {
                 right: -56.5px;
-                top: 99%
+                top: 99%;
               }
             }
           }
@@ -470,6 +489,7 @@ header#header {
     flex-direction: column;
     @media (max-width: $small) {
       max-height: none;
+      padding-top: 6px;
     }
     .drop-link-holder {
       padding-right: 24px;
@@ -527,6 +547,11 @@ header#header {
             border-bottom: 1px solid #e5e5e5;
             width: 100%;
             padding: 20px 10px;
+            font-size: 16px;
+            font-weight: 300;
+            letter-spacing: 0.5px;
+            color: #fff;
+            padding-left: 35px;
           }
         }
         .drop-title:hover {
