adds memcached [ch11067]

--- a/app/views/spree/home/sections/_featured_collection.html.erb
+++ b/app/views/spree/home/sections/_featured_collection.html.erb
@@ -1,7 +1,7 @@
 <% collection = featured_collection_taxon %>
 <% products = @searcher.collection_products(featured_collection_taxon) if featured_collection_taxon %>
 <% if collection && !products.empty? %>
-  <%# cache(cache_key_for_home_products(:featured_collection, collection)) do %>
+  <%# cache(cache_key_for_home_products(:featured_collection, collection, products)) do %>
     <div class="container">
       <div class="col info-col">
         <picture>
@@ -14,13 +14,13 @@
         <%= link_to t("store.home.featured_collection.button"), seo_url(collection), class: "btn btn-white-transparent" %>
       </div>
       <div class="col products-col">
-        <% products.each do |product| %>
-          <div class="product-wrapper">
-            <%# cache(@taxon.present? ? [I18n.locale, :featured_collection, current_pricing_options, @taxon, product] : [I18n.locale, :featured_collection, current_pricing_options, product]) do %>
-              <%= render partial: 'spree/shared/product_card', locals: { product: product, css_classes: 'product-side zoom-effect' } %>
-            <%# end %>
-          </div>
-        <% end %>
+        <div class="product-side zoom-effect">
+          <% products.each do |product| %>
+            <div class="product-wrapper">
+              <%= render partial: 'spree/shared/product_card', locals: { product: product } %>
+            </div>
+          <% end %>
+        </div>
       </div>
     </div>
   <%# end %>
