--- a/app/views/spree/home/sections/_featured_producer.html.erb
+++ b/app/views/spree/home/sections/_featured_producer.html.erb
@@ -1,16 +1,16 @@
 <% producer = featured_producer_taxon %>
 <% products = @searcher.producer_products(featured_producer_taxon) if featured_producer_taxon %>
 <% if producer && !products.empty? %>
-  <%# cache(cache_key_for_home_products(:featured_producer, producer)) do %>
+  <%# cache(cache_key_for_home_products(:featured_producer, producer, products)) do %>
     <div class="container">
       <div class="col slider-col">
-        <% products.each do |product| %>
-          <div class="product-col">
-            <%# cache(@taxon.present? ? [I18n.locale, :featured_producer, current_pricing_options, @taxon, product] : [I18n.locale, :featured_producer, current_pricing_options, product]) do %>
-              <%= render partial: 'spree/shared/product_card', locals: { product: product, css_classes: 'zoom-effect' } %>
-            <%# end %>
-          </div>
-        <% end %>
+        <div class="zoom-effect">
+          <% products.each do |product| %>
+            <div class="product-col">
+              <%= render partial: 'spree/shared/product_card', locals: { product: product } %>
+            </div>
+          <% end %>
+        </div>
       </div>
       <div class="col info-col">
         <% producer_image = producer.gallery.images.first %>
