--- a/app/views/spree/home/sections/_new_products.html.erb
+++ b/app/views/spree/home/sections/_new_products.html.erb
@@ -1,7 +1,7 @@
 <% taxon_new = taxon_by_key(:new) %>
 <% products = @searcher.new_products(taxon_new) if taxon_new %>
 <% if taxon_new && !products.empty? %>
-  <%# cache(cache_key_for_home_products(:new_products)) do %>
+  <%# cache(cache_key_for_home_products(:new_products, nil, products)) do %>
     <div class="container">
       <div class="col info-col">
         <picture>
@@ -15,11 +15,13 @@
         <%= link_to t("store.home.new_products.button"), seo_url(taxon_new), class: "btn btn-white-transparent" %>
       </div>
       <div class="col products-col">
-        <% products.each do |product| %>
-          <div class="product-wrapper">
-            <%= render partial: 'spree/shared/product_card', locals: { product: product, css_classes: 'new-product product-side zoom-effect' } %>
-          </div>
-        <% end %>
+        <div class="new-product product-side zoom-effect">
+          <% products.each do |product| %>
+            <div class="product-wrapper">
+              <%= render partial: 'spree/shared/product_card', locals: { product: product } %>
+            </div>
+          <% end %>
+        </div>
       </div>
     </div>
   <%# end %>
