--- a/app/views/spree/products/show/_region.html.erb
+++ b/app/views/spree/products/show/_region.html.erb
@@ -5,11 +5,13 @@
 
     <div class="container">
       <div class="col slider-col">
-        <% Spree::Product.products_for_taxon(taxon: region, limit: 2).each do |product| %>
-          <div class="product-col">
-            <%= render partial: 'spree/shared/product_card', locals: { product: product, css_classes: 'zoom-effect' } %>
-          </div>
-        <% end %>
+        <div class="zoom-effect">
+          <% Spree::Product.products_for_taxon(taxon: region, limit: 2).each do |product| %>
+            <div class="product-col">
+              <%= render partial: 'spree/shared/product_card', locals: { product: product } %>
+            </div>
+          <% end %>
+        </div>
       </div>
 
       <div class="col info-col">
