--- a/app/views/spree/products/show/_swiper.html.erb
+++ b/app/views/spree/products/show/_swiper.html.erb
@@ -7,11 +7,13 @@
     <!-- Additional required wrapper -->
     <div class="swiper-wrapper">
       <!-- Slides -->
-      <% Spree::Product.products_for_taxon(taxon: producer).each do |product| %>
-        <div class="swiper-slide">
-          <%= render partial: 'spree/shared/product_card', locals: { product: product, css_classes: 'product-side zoom-effect' } %>
-        </div>
-      <% end %>
+      <div class="product-side zoom-effect">
+        <% Spree::Product.products_for_taxon(taxon: producer).each do |product| %>
+          <div class="swiper-slide">
+            <%= render partial: 'spree/shared/product_card', locals: { product: product } %>
+          </div>
+        <% end %>
+      </div>
     </div>
     <div class="swiper-navigation">
       <!-- If we need navigation buttons -->
