--- a/app/views/spree/shared/_product_cards.html.erb
+++ b/app/views/spree/shared/_product_cards.html.erb
@@ -1,8 +1,8 @@
-<% products.each do |product| %>
-  <div class="product-col">
-    <%# cache(@taxon.present? ? [I18n.locale, :products, current_pricing_options, @taxon, product] : [I18n.locale, :products, current_pricing_options, product]) do %>
-    <%= render partial: 'spree/shared/product_card', locals: { product: product, css_classes: 'zoom-effect' } %>
-    <%# end %>
-  </div>
-<% end %>
+<div class="zoom-effect">
+  <% products.each do |product| %>
+    <div class="product-col">
+      <%= render partial: 'spree/shared/product_card', locals: { product: product } %>
+    </div>
+  <% end %>
+</div>
 <% reset_cycle("classes") %>
