--- a/app/assets/stylesheets/scss/_header.scss
+++ b/app/assets/stylesheets/scss/_header.scss
@@ -96,7 +96,7 @@ header#header {
         }
         @media (max-width: $mobileHeader) {
           position: fixed;
-          z-index: 10;
+          z-index: 2;
           top: 108px;
           padding-left: 20px;
           left: 0;
@@ -877,16 +877,12 @@ header#header .header-content .header-right .header-actions {
   }
 }
 header#header .header-content .header-right {
-  div {
-    &:first-child {
-      @media screen and (max-width: $mobileHeader) {
-        width: 70%;
-        #search-bar {
-          width: 100%;
-        }
-      }
-    }
-  }
+  //@media screen and (max-width: $mobileHeader) {
+  //  width: 70%;
+  //  #search-bar {
+  //    width: 100%;
+  //  }
+  //}
 }
 header#header .header-content .header-right #search-bar {
   @media screen and (min-width: $mobileHeader) {
@@ -953,6 +949,19 @@ header#header .header-content .header-right #search-bar {
         }
       }
     }
+  }
+}
+
+header#header .header-content .header-right .navbar .nav-link-holder .nav-drop-holder .nav-dropdown {
+  @media screen and (min-width: 900px) and (max-width: 1025px) {
+    top: calc(100% + 15px);
+    left: 0;
+  }
+}
+header#header .header-content .header-right .navbar .nav-link-holder .nav-drop-holder .nav-dropdown .col.dropdown-col .drop-link-holder {
+  width: auto;
+  @media screen and (max-width: $small) {
+    padding-right: 0;
   }
 }
 
