Responsive Black screen block - CMS data missing fixed [ch11148]

--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -34,7 +34,7 @@
   </div>
 
   <div class="slider-and-info-section">
-#     <%= image_tag("home/slider-and-info-background.png", class: "background-image") %>
+    <%= image_tag("home/slider-and-info-background.png", class: "background-image") %>
     <%= render partial: 'spree/home/sections/featured_producer' %>
   </div>
 
